# flaskformpetproject

./: README.md  docker-compose.yml  dockerfile  pyproject.toml
src/: addingform.py  main.py  pydanticmodels.py
src/db/: baseconnection.py  dbconfig.py  dbmodels.py  dbscripts.py
src/migrations/: env.py
src/migrations/versions/: 625e03312e9f_.py
src/static/: styles.css
src/templates/: form.html  goodluck.html  uniquenesserror.html
