[project]
name = "flaskform"
version = "0.1.0"
description = ""
authors = [
    {name = "John"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    #"alembic (>=1.18.1,<2.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.12.0"
flask = "3.0.2"
gunicorn = ">=21.0.0"
pydantic = "2.5.0"
pydantic-settings = "2.1.0"
sqlalchemy = "2.0.23"
psycopg2-binary = "2.9.9"
psycopg2 = "2.9.9"
alembic = ">=1.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
